<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginactivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_height="match_parent"
            android:src="@drawable/as"
            android:scaleType="centerCrop"
            android:alpha="0.6"
            android:layout_width="match_parent"/>
        <LinearLayout
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/welcome1"
                android:textColor="#493F43"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="221dp"
                android:layout_height="88dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/login_sign_up"
                android:textColor="#493F43"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="25dp"
                android:autofillHints=""
                android:background="@drawable/rounded_border"
                android:gravity="center"
                android:hint="Enter Email"
                android:inputType=""
                android:textColor="#493F43"
                android:textColorHint="@color/black"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/rounded_border"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="#493F43"
                android:textColorHint="@color/black" />
            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_border"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:backgroundTint="#d1627e"
                android:onClick="login"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:weightSum="2"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/forgetpassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/forgot_password"
                    android:textColor="#191516"
                    android:textSize="16sp"
                    android:clickable="true"
                    android:onClick="forgetpassw"/>

                <View
                    android:layout_width="3dp"
                    android:layout_height="match_parent"
                    android:background="@color/black" />
                <TextView
                    android:id="@+id/register"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/register"
                    android:textColor="#191516"
                    android:textSize="18sp"
                    android:clickable="true"
                    android:onClick="register"/>

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>